basic caption extraction